# web_scraping_inicio

./: README.md  globo.py  ibge.py  main_esportes.py  news.py  pyproject.toml  site_base.py
